# NeMo-Relay

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ATTRIBUTIONS-Node.md  ATTRIBUTIONS-Python.md  ATTRIBUTIONS-Rust.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  codecov.yml  deny.toml  justfile  package-lock.json  package.json  pyproject.toml  sonar-project.properties
.agents/skills/: README.md
.github/: nightly-alpha-branches.yaml
.github/workflows/: ci.yaml  ci_check.yml  ci_go.yml  ci_node.yml  ci_pipe.yml  ci_python.yml  ci_rust.yml  ci_wasm.yml  nightly-alpha-tag.yaml
crates/adaptive/: README.md
crates/cli/: Cargo.toml
crates/core/: Cargo.toml
crates/ffi/: nemo_flow.h
crates/node/: README.md  observability.d.ts  package.json
crates/pii-redaction/: Cargo.toml  README.md
crates/wasm/: README.md  package.json
docs/: index.md  index.yml
docs/about/: architecture.md  ecosystem.md
docs/build-plugins/: about.md  code-examples.md  nemoguardrails.mdx  plugin-configuration-files.mdx
docs/contribute/: about.md  development-setup.md
docs/export-observability-data/: about.md  advanced-guide.md  code-examples.md
docs/getting-started/: configuration.md  prerequisites.md
docs/instrument-applications/: adding-scopes-and-marks.md  code-examples.md
docs/integrate-frameworks/: about.md  adding-scopes.md  provider-codecs.md  using-codecs.md
docs/nemo-relay-cli/: basic-usage.mdx
docs/observability-plugin/: configuration.mdx
docs/resources/: glossary.md  support-and-faqs.md
docs/troubleshooting/: trace-incident-runbook.md  troubleshooting-guide.md
docs/use-adaptive-optimization/: about.md
examples/python-grpc-worker-plugin/: .gitignore  README.md  pyproject.toml  relay-plugin.toml
examples/python-grpc-worker-plugin/nemo_relay_python_grpc_worker_example/: __init__.py  worker.py
go/nemo_flow/: atof_test.go  context_test.go  nemo_flow.go  scope_test.go
go/nemo_relay/: observability_plugin_test.go  openinference_test.go
integrations/openclaw/: package.json
patches/hermes-agent/: notes.md
python/nemo_relay/: observability.py  observability.pyi  plugin.py
python/plugin/: .gitignore  README.md  build_backend.py  pyproject.toml
python/plugin/src/nemo_relay_plugin/: _api.py
python/plugin/src/nemo_relay_plugin/_proto/: __init__.py
skills/: README.md
(+185 files in other folders)
